# simple_basic

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
